k8s-manifests/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-canary
  namespace: dev
spec:
  replicas: 0
  selector:
    matchLabels:
      app: django
      track: canary
  template:
    metadata:
      labels:
        app: django
        track: canary
    spec:
      containers:
        - name: django-container
          image: us-central1-docker.pkg.dev/research-502304/canary-repo/canary-app:1
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /start/
              port: 8000
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /ready/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /live/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
