k8s-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: dev
  labels:
    app: django
spec:
  type: ClusterIP
  selector:
    app: django
  ports:
    - name: web
      port: 8000
      targetPort: 8000
