k8s-manifests/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
